--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
         </div>
         <div style="width: 100%; height: 1px; background-color: #3E3C4E;"></div>
         <p style="font-weight: 500; font-size: 25px; margin: 0px; padding: 5px; color: #ffffff;">
-            ページが見つかりません<br>でした......
+            ページが見つかりません<br>でした.....
         </p>
     </div>
     <!--end 404-->
