--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div style="width: 100%; height: 1px; background-color: #a09d9d;"></div>
             <div style="height: 5px;"></div>
-            <p style="font-weight: 400; font-size: 17px; margin: 0px; padding-left: 25px; text-align:left; color: #ffffff;">
+            <p style="font-weight: 400; font-size: 17px; margin: 0px; padding-left: 25px; text-align:left; color: #ffffff; margin-top: 10px;">
             Name : Kotaro Ito<br>Age : 14<br>Birthday : 2009/08/14<br>Profession : Student<br>Game : VALORANT
             </p>
     </div>
@@ -77,7 +77,7 @@
         </div>
         <div style="width: 100%; height: 1px; background-color: #a09d9d;"></div>
             <p style="font-weight: 400; font-size: 17px; margin: 0px; padding-left: 25px; padding-top: 15px; text-align:left; color: #ffffff;">
-                Tools : AviUtl, GarageBand<br> Frontend : JavaScript, Node.js, React, Next.js <br>Backend : Java, Ruby
+                Tools : AviUtl, GarageBand<br> Frontend : JavaScript, Swift, React, Next.js <br>Backend : Java, Ruby
             </p>
             <a href="tasks.html" style="text-decoration: none;"><p class="viewprogress">ViewProgress</p></a>
     </div>
