--- a/tasks.html
+++ b/tasks.html
@@ -35,7 +35,7 @@
             <p style="font-size: 20px; padding-top: -10px; text-align: center;">v2ポートフォリオ作成&編集</p>
             <br>
             <div class="progBar1"><p style="margin-block-start: 0em; margin-block-end: 0em;" class="bar on"></p></div>
-            <p class="nambar">96%</p>
+            <p class="nambar">100%</p>
             </div>
         </div>
     </div>
@@ -58,9 +58,9 @@
         <div class="task3" style="max-width: 700px; max-height: 400px; background-color: rgb(124, 125, 141, 0.6);border-radius: 20px; box-shadow: 0 0 15px 0 #90bde2; margin: auto;">
             <p style="font-size: 20px; padding-top: -10px; text-align: center;">ポートフォリオv3(妄想)</p>
             <div class="progBar3"><p style="margin-block-start: 0em; margin-block-end: 0em;" class="bar on"></p></div>
-            <p class="nambar">2%</p>
+            <p class="nambar">89%</p>
             <div style="width: auto; height: 2px; background-color: #3E3C4E;"></div>
-            <p style="margin-left: 20px; text-align: left;">予定<br>今までポートフォリオに使ってきた言語ツール<br>・v0 = GoogleSite(N中のやつ)<br>・v1 = テンプレ(VSCode HTML CSS JavaScript)<br>・v2 = VSCode HTML CSS JavaScript<br>・v3 = ？<br>v3を何で作るか候補(Reactやってみたい)<br>・React<br>・Next.js<br>・JavaScript<br>・HTML CSS JavaScript</p>
+            <p style="margin-left: 20px; text-align: left;">予定<br>今までポートフォリオに使ってきた言語ツール<br>・v0 = GoogleSite(N中のやつ)<br>・v1 = テンプレ(VSCode HTML CSS JavaScript)<br>・v2 = VSCode HTML CSS JavaScript<br>・v3 = HTML CSS JavaScript<br>色々考えたけどまだHTMLにそこまで慣れてないのでまだまだHTMLで書き続けます</p>
             <div style="height: 1px;"></div>
         </div>
     </div>
