--- a/tasks.html
+++ b/tasks.html
@@ -60,7 +60,7 @@
             <div class="progBar3"><p style="margin-block-start: 0em; margin-block-end: 0em;" class="bar on"></p></div>
             <p class="nambar">89%</p>
             <div style="width: auto; height: 2px; background-color: #3E3C4E;"></div>
-            <p style="margin-left: 20px; text-align: left;">予定<br>今までポートフォリオに使ってきた言語ツール<br>・v0 = GoogleSite(N中のやつ)<br>・v1 = テンプレ(VSCode HTML CSS JavaScript)<br>・v2 = VSCode HTML CSS JavaScript<br>・v3 = HTML CSS JavaScript<br>色々考えたけどまだHTMLにそこまで慣れてないのでまだまだHTMLで書き続けます</p>
+            <p style="margin-left: 20px; text-align: left;">予定<br>今までポートフォリオに使ってきた言語ツール<br>・v0 = GoogleSite<br>・v1 = テンプレ(VSCode HTML CSS JavaScript)<br>・v2 = VSCode HTML CSS JavaScript<br>・v3 = HTML CSS JavaScript<br>色々考えたけどまだHTMLにそこまで慣れてないのでまだまだHTMLで書き続けます</p>
             <div style="height: 1px;"></div>
         </div>
     </div>
